crates/mcf/src/syntax/grammar/snapshots/mcfunction_mcf__syntax__grammar__json__tests__object_simple.snap
---
source: crates/mcf/src/syntax/grammar/json.rs
expression: "parse_json(r#\"{\"text\":\"hello\"}\"#)"
---
Root(File)
Group(JsonObject) at 0:0 - 0:16 {
    Token(LCurly) `{` at 0:0 - 0:1
    Group(JsonObjectEntry) at 0:1 - 0:15 {
        Token(QuotedString) `"text"` at 0:1 - 0:7
        Token(Colon) `:` at 0:7 - 0:8
        Token(QuotedString) `"hello"` at 0:8 - 0:15
    }
    Token(RCurly) `}` at 0:15 - 0:16
}

